@startuml inheritence

'
' SETTINGS
'

hide circle

skinparam DefaultFontName  monospaced
skinparam DefaultFontSize          16
skinparam DefaultFontStyle      plain

'
' ENTITIES
'

entity "Lesson" as lesson
{
	skillLevel
}

entity "LessonPayment" as lessonPayment
{
	skillLevel
	lessonType
	timeOfLesson
	siblingDiscount
	cost
}

entity "Individual" as lessonIndividual
{
	instrumentFocus
}

entity "MultiplePeople" as lessonMultiplePeople
{
	numberOfPlacesMinimum
	numberOfPlacesMaximum
}

entity "Group" as lessonGroup
{
	instrumentFocus
}

entity "Ensemble" as lessonEnsemble
{
	genre
}

entity "Appointment" as appointment
{
	studentId
	instructorId
	startTime
	duration
}

entity "TimeSlot" as timeSlot
{
	startTime
	duration
}

entity "Person" as person
{
	personNumber UNIQUE
	firstName
	lastName
}

entity "Address" as address
{
	city
	zipCode
	street
}

entity "ContactDetails" as contact
{
	email
	phoneNumber
}

entity "Student" as student
{
	studentId      UNIQUE
	siblings         0..*
	contactPersons   0..*
}

entity "Instructor" as instructor
{
	instructorId              UNIQUE
	instrumentsProficientWith   1..*
}

entity "InstrumentStock" as instrumentStock
{
	modelId        UNIQUE
	instrumentType
	brand
	quantity
}

entity "Instrument" as instrument
{
	instrumentId UNIQUE
	modelId
}

entity "Rental" as rental
{
	rentalId     UNIQUE
	instrumentId UNIQUE
	timeOfRental
	leaseMonths
}

entity "RentalPayment" as rentalPayment
{
	rentalId
	cost
}

'
' RELATIONS
'

lesson <|-- lessonIndividual

lesson <|-- lessonMultiplePeople

lessonMultiplePeople <|-- lessonGroup

lessonMultiplePeople <|-- lessonEnsemble

person <|--- student

person <|--- instructor

person "1" - "1" address : lives at >

contact "1" - "1" person : used to contact >

student "1" --- "0..*" lesson : attends >

student "1" -- "0..2" rental : rents >

student "1" -- "0..*" lessonPayment : pays >

student "1" - "0..2" rentalPayment : pays >

instructor "1" -- "0..*" lessonPayment : receives >

instructor "1" --- "0..*" lesson : holds >

rental "1" -- "1" instrument : rents >

instrumentStock "1" -- "0..*" instrument : keeps track of >

appointment "1" - "1" lessonIndividual : schedules >

timeSlot "1" - "1" lessonMultiplePeople : schedules >

'
' NOTES
'

note as N1
	Attributes have a cardinality of 1 unless specified otherwise,
	they also and do not have to be unique.
end note

note right of lesson
	The different skill levels:
	- Beginner
	- Intermediate
	- Advanced
end note

note right of lessonPayment
	Sibling discount
	does not affect
	payment of the
	instructor.
end note

note right of rentalPayment
	**rentalId** will not have to be unique
	to account for cases where a student
	misses to pay for an instrument
	multiple months in a row.
end note

note top of student
	Contact persons are stored as their person number.
	With that you can retrieve their information.
end note

@enduml
